--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,22 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #000;
+  padding: 3rem; }
+
+.heading-text {
+  position: absolute;
+  top: 0;
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: #fff;
+  text-transform: uppercase; }
+
 .header {
   height: 100vh;
   width: 100%;
