--- a/sass/Abstracts/_variables.scss
+++ b/sass/Abstracts/_variables.scss
@@ -7,7 +7,7 @@ $color-white: #fff;
 $color-black: #000;
 
 // FONT SIZE
-$default-font-size: 1.6rem;
+$default-font-size: 5.8vmin;
 
 // GRID
 $grid-width: 114rem;
