--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,16 +2,25 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: $default-font-size;
-  line-height: 1.7;
+  line-height: 1;
   color: $color-black;
   padding: 3rem;
 }
 
-.heading-text {
-  position: absolute;
-  top: 0;
-  font-size: 1.2rem;
+.header__hero-tagline {
+  font-family: "Roboto", sans-serif;
+  color: $color-secondary;
   font-weight: 900;
-  color: $color-white;
-  text-transform: uppercase;
+  text-shadow: 3px 3px 0 $color-tertiary, 3px -3px 0 $color-tertiary,
+    -3px 3px 0 $color-tertiary, -3px -3px 0 $color-tertiary,
+    3px 0px 0 $color-tertiary, 0px 3px 0 $color-tertiary,
+    -3px 0px 0 $color-tertiary, 0px -3px 0 $color-tertiary;
+  line-height: 1.2;
+
+  &--one {
+    display: block;
+  }
+  &--two {
+    display: block;
+  }
 }
