--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,10 +9,26 @@
   top: 0;
   left: 0;
 
-  &__hero {
+  &__hero-box {
+    display: flex;
+    justify-content: flex-end;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    height: 100vw;
+    height: 100vmin;
+    // border: solid red 5px;
+  }
+
+  &__hero-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+
+  &__hero-tagline {
+    // border: solid green 3px;
+    position: absolute;
+    top: 8%;
+    right: 3%;
   }
 }
