--- a/css/style.css
+++ b/css/style.css
@@ -136,15 +136,22 @@ body {
   padding: 3rem; }
 
 .header__hero-tagline {
+  display: flexbox;
+  top: 20%;
   font-family: "Roboto", sans-serif;
   color: #ffc93c;
   font-weight: 900;
   text-shadow: 3px 3px 0 #155263, 3px -3px 0 #155263, -3px 3px 0 #155263, -3px -3px 0 #155263, 3px 0px 0 #155263, 0px 3px 0 #155263, -3px 0px 0 #155263, 0px -3px 0 #155263;
   line-height: 1.2; }
+  @media (orientation: portrait) {
+    .header__hero-tagline {
+      transform: translateX(-5%); } }
   .header__hero-tagline--one {
-    display: block; }
+    display: flex;
+    justify-content: center; }
   .header__hero-tagline--two {
-    display: block; }
+    display: flex;
+    justify-content: center; }
 
 .header {
   height: 100vh;
@@ -160,12 +167,19 @@ body {
     display: flex;
     justify-content: flex-end;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 100vmin; }
+    width: 100vmin; }
+    @media (orientation: portrait) {
+      .header__hero-box {
+        top: 50%;
+        transform: translateY(-50%); } }
+    @media (orientation: landscape) {
+      .header__hero-box {
+        height: 100vh;
+        left: 50%;
+        transform: translateX(-50%); } }
   .header__hero-image {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain; }
   .header__hero-tagline {
     position: absolute;
