--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,6 +8,8 @@ body {
 }
 
 .header__hero-tagline {
+  display: flexbox;
+  top: 20%;
   font-family: "Roboto", sans-serif;
   color: $color-secondary;
   font-weight: 900;
@@ -17,10 +19,16 @@ body {
     -3px 0px 0 $color-tertiary, 0px -3px 0 $color-tertiary;
   line-height: 1.2;
 
+  @media (orientation: portrait) {
+    transform: translateX(-5%);
+  }
+
   &--one {
-    display: block;
+    display: flex;
+    justify-content: center;
   }
   &--two {
-    display: block;
+    display: flex;
+    justify-content: center;
   }
 }
