--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,20 +13,25 @@
     display: flex;
     justify-content: flex-end;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 100vmin;
-    // border: solid red 5px;
+    width: 100vmin;
+    @media (orientation: portrait) {
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    @media (orientation: landscape) {
+      height: 100vh;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   &__hero-image {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
   }
 
   &__hero-tagline {
-    // border: solid green 3px;
     position: absolute;
     top: 8%;
     right: 3%;
